@@ -1,6 +1,13 @@
+2008-06-26
+	* Added build support for MingW under Cygwin. This is simpler than installing 
+	  Msys, simply install MingW to say c:\MinwG, then change your .bash_profile with: 
+	  export PATH=/c/MinGW/bin:$PATH
+	  Then re-run configure (under cygwin bash) and a non-cygwin console version will 
+	  be produced which can run under cmd.exe, explorer.exe etc.
+	
 2008-06-20
 	* Can now supply program arguments on FLTK version command line:
-	sbasici -r t5.bas foo -or- sbasici t5.bas foo
+	  sbasici -r t5.bas foo -or- sbasici t5.bas foo -or ls | sbasic t5.bas
 
 2008-06-06
 	* Implemented the ability to declare a local variable and assign a
